Fixing spacing

--- a/webapp/src/main/webapp/css/user.css
+++ b/webapp/src/main/webapp/css/user.css
@@ -198,6 +198,11 @@ div#save-confirm {
   opacity: 0.9;
 }
 
+form > p.required:first-child
+{
+  padding-left: 3px;
+}
+
 div#formError {
   color: red;
   padding: 10px;
